php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #43216 stream_is_local() returns false on file://
Submitted: 2007-11-08 08:17 UTC Modified: 2007-11-09 09:37 UTC
From: php at benjaminschulz dot com Assigned: dmitry (profile)
Status: Closed Package: Streams related
PHP Version: 5.3CVS-2007-11-08 (CVS) OS: linux
Private report: No CVE-ID: None
 [2007-11-08 08:17 UTC] php at benjaminschulz dot com
Description:
------------
stream_is_local() should return true for "file://"

Reproduce code:
---------------
var_dump(stream_is_local("file://"));

Expected result:
----------------
bool(true)

Actual result:
--------------
bool(false)

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2007-11-09 09:37 UTC] dmitry@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC