Fixed bug #43216 (stream_is_local() returns false on "file://")